--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ h3 {color:#3d3d3f;
 font-size:16px;
 font-weight: bolder; }
 
- {color: #845007}
 
 .tutor{ color: #845007}
+.intake { color: #845007}
+.lab { color: #845007}
+.admin { color: #845007}
