--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 
 
- body {background-color: #F5F5F5;
+
+body {background-color:#F5F5F5 ;
    font-family: 'Open Sans', sans-serif;
 }
 
-.head {background-color: #3a4660;
-  margin: -10px ; padding-top: 10px; padding-bottom: 10px;}
-
+ .header {background-color: #3a4660;
+  margin: -10px ; 
+  padding-top: 10px; 
+  padding-bottom: 10px;}
 
 
 
@@ -26,6 +28,7 @@ h2 {color:#c9af98;
 h3 {color:#3d3d3f;
 font-size:16px;
 font-weight: bolder; }
+
 
 
 .tutor{ color: #845007}
